# FM

./: CMakeLists.txt  accounts_meta_data.json  main.cpp  make_cpr.bat  make_cpr.sh  resources.rc  setenv.bat
cmake/: FindSodium.cmake
libraries/cpr/lib/: cpr.lib
libraries/cpr/lib/cmake/cpr/: cprTargets.cmake
libraries/curl/: CONTROL
libraries/curl/share/curl/: CURLTargets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
libraries/libsodium/ARM64/Debug/v143/dynamic/: libsodium.ilk  libsodium.lib
libraries/libsodium/ARM64/Debug/v143/static/: libsodium.lib
libraries/libsodium/ARM64/Release/v143/ltcg/: libsodium.lib
libraries/libsodium/ARM64/Release/v143/static/: libsodium.lib
libraries/libsodium/Win32/Debug/v142/dynamic/: libsodium.exp  libsodium.ilk  libsodium.lib
libraries/libsodium/Win32/Debug/v142/static/: libsodium.lib
libraries/libsodium/Win32/Debug/v143/dynamic/: libsodium.ilk
libraries/libsodium/Win32/Debug/v143/static/: libsodium.lib
libraries/libsodium/Win32/Release/v142/dynamic/: libsodium.exp
libraries/libsodium/Win32/Release/v142/ltcg/: libsodium.lib
libraries/libsodium/Win32/Release/v142/static/: libsodium.lib
libraries/libsodium/Win32/Release/v143/dynamic/: libsodium.lib
libraries/libsodium/Win32/Release/v143/static/: libsodium.lib
libraries/libsodium/x64/Debug/v142/dynamic/: libsodium.exp  libsodium.ilk  libsodium.lib
libraries/libsodium/x64/Debug/v142/static/: libsodium.lib
libraries/libsodium/x64/Debug/v143/dynamic/: libsodium.ilk  libsodium.lib
libraries/libsodium/x64/Debug/v143/static/: libsodium.lib
libraries/libsodium/x64/Release/v142/dynamic/: libsodium.exp
libraries/libsodium/x64/Release/v142/ltcg/: libsodium.lib
libraries/libsodium/x64/Release/v142/static/: libsodium.lib
libraries/libsodium/x64/Release/v143/static/: libsodium.lib
libraries/wxWidgets/lib/vc_x64_dll/: wxbase32u.lib  wxbase32u_net.lib  wxbase32u_xml.lib  wxbase32ud.lib  wxbase32ud_net.lib  wxbase32ud_xml.lib  wxexpat.lib  wxexpatd.lib  wxjpeg.lib  wxjpegd.lib  wxmsw32u_adv.lib  wxmsw32u_aui.lib  wxmsw32u_gl.lib  wxmsw32u_html.lib  wxmsw32u_media.lib  wxmsw32u_propgrid.lib  wxmsw32u_qa.lib  wxmsw32u_ribbon.lib  wxmsw32u_richtext.lib  wxmsw32u_stc.lib  wxmsw32u_webview.lib  wxmsw32u_xrc.lib  wxmsw32ud_adv.lib  wxmsw32ud_aui.lib  wxmsw32ud_gl.lib  wxmsw32ud_html.lib  wxmsw32ud_media.lib  wxmsw32ud_propgrid.lib  wxmsw32ud_qa.lib  wxmsw32ud_ribbon.lib  wxmsw32ud_richtext.lib  wxmsw32ud_stc.lib  wxmsw32ud_webview.lib  wxmsw32ud_xrc.lib  wxpng.lib  wxpngd.lib  wxregexu.lib  wxregexud.lib  wxtiff.lib  wxtiffd.lib  (+2 more)
libraries/zlib/: CONTROL
libraries/zlib/debug/lib/: zlibd.lib
libraries/zlib/lib/: zlib.lib
libraries/zlib/share/zlib/: vcpkg.spdx.json  vcpkg_abi_info.txt
resources/: FinanceManager.icns
src/: CMakeLists.txt
src/cloud_storage/: CMakeLists.txt  onedrive.cpp
src/icons/: CMakeLists.txt  wxAwesomeBrandsArt.cpp  wxAwesomeRegularArt.cpp  wxAwesomeSolidArt.cpp  wxFluentuiFilledArt.cpp  wxFluentuiRegularArt.cpp  wxMaterialDesignArtProvider.cpp  wxMaterialFilledArt.cpp  wxMaterialOutlinedArt.cpp  wxMaterialRoundArt.cpp  wxMaterialSharpArt.cpp  wxMaterialTwoToneArt.cpp  wxSimpleIconsArt.cpp
src/include/: app_config.hpp  calculator.hpp  formatter.hpp  icons.hpp  user_config.hpp
src/include/cloud_storage/: onedrive.hpp
src/include/models/: account.hpp  account_factory.hpp  bank_account.hpp  borrow_account.hpp  category.hpp  chit_account.hpp  credit_card_account.hpp  fd_account.hpp  give_account.hpp  loan_account.hpp  model.hpp  model_factory.hpp  models_manager.hpp  notifiation.hpp  property_account.hpp  rd_account.hpp  stock_account.hpp  transaction.hpp
src/include/onedrive/: onedrive.hpp
src/include/tradeapi/: upstox.hpp
src/include/ui/: account_summary.hpp  add_model.hpp  edit_model.hpp  home.hpp  task_bar_icon.hpp
src/include/ui/account/: add_account.hpp  modify_account.hpp  view_account.hpp
src/include/ui/model_view_panels/: account_view.hpp  bank_account_view.hpp  borrow_account_view.hpp  category_view.hpp  chit_account_view.hpp  credit_card_account_view.hpp  give_account_view.hpp  model_view.hpp  model_view_factory.hpp  rd_account_view.hpp
src/models/: CMakeLists.txt  transactions.cpp
src/onedrive/: CMakeLists.txt  onedrive.cpp
src/ui/: CMakeLists.txt  add_model.cpp  edit_model.cpp
src/ui/account/: add_account.cpp  modify_account.cpp  view_account.cpp
